crates/tests/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__query_dataset__with_query_range_all_data.snap
---
source: crates/tests/re_redap_tests/src/tests/query_dataset.rs
expression: filtered_chunk_info.format_snapshot(false)
---
┌──────────────────────────────────┬─────────────────────┬─────────────────────┬───────────────────┬─────────────────┬────────────────────────┬───────────────────────────────────┐
│ chunk_id                         ┆ chunk_segment_id    ┆ rerun_segment_layer ┆ chunk_entity_path ┆ chunk_is_static ┆ rerun_layer_direct_url ┆ rerun_layer_direct_url_expires_at │
╞══════════════════════════════════╪═════════════════════╪═════════════════════╪═══════════════════╪═════════════════╪════════════════════════╪═══════════════════════════════════╡
│ 00000000000000640000000000000001 ┆ static_test_segment ┆ base                ┆ /static_only      ┆ true            ┆ null                   ┆ null                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 00000000000000640000000000000002 ┆ static_test_segment ┆ base                ┆ /both             ┆ true            ┆ null                   ┆ null                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 00000000000000640000000000000004 ┆ static_test_segment ┆ base                ┆ /temporal_only    ┆ false           ┆ null                   ┆ null                              │
└──────────────────────────────────┴─────────────────────┴─────────────────────┴───────────────────┴─────────────────┴────────────────────────┴───────────────────────────────────┘
